docs: by adding comments to all relevant controller files